Lakka-Light: enable various online updaters
Intention of Lakka-Light (name is WIP) is to deliver Lakka as small as
possible in size - without any cores/assets/databases/system files - as
if one downloads standalone RetroArch.

To build RetroArch for Lakka-Light, at least follwing options have to
be passed to the `make` command:

- `HAVE_LAKKA` - enables Lakka features
- `HAVE_LAKKA_LIGHT` - enables online updaters
- `LAKKA_PLATFORM` - sets the default core updater path in URL, e.g. `RPi4.aarch64`

--- a/Makefile.common
+++ b/Makefile.common
@@ -1072,6 +1072,15 @@ ifeq ($(HAVE_LAKKA_NIGHTLY), 1)
    DEFINES += -DHAVE_LAKKA_NIGHTLY
 endif
 
+ifeq ($(HAVE_LAKKA_LIGHT), 1)
+   DEFINES += -DHAVE_LAKKA_LIGHT
+   ifeq ($(LAKKA_PLATFORM),)
+      $(error Building Lakka-Light, but no LAKKA_PLATFORM given - set via LAKKA_PLATFORM=DEVICE.ARCH)
+   else
+      DEFINES += -DLAKKA_PLATFORM="\"$(LAKKA_PLATFORM)\""
+   endif
+endif
+
 ifeq ($(HAVE_MENU_COMMON), 1)
    OBJ += menu/menu_setting.o \
           menu/menu_driver.o \
